--- a/handlebars/public/index.html
+++ b/handlebars/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="ISO-8859-1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sala de Chat!</title>
+    <title>Inicio!</title>
     <link rel="stylesheet" href="styles/index.css">
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
@@ -24,7 +24,7 @@
     <div id="products"></div>
 
     <br><br><br><br>
-    <h3>🙃 ¡Chat Coders 31830! 👌</h3>
+    <h3>Chat!</h3>
 
     <form onsubmit="return enviarMensaje()">
         <input type="email" id="email" placeholder="Nombre">
